Revision history for HOP-Parser

0.03
      * Added the plus() parser.

0.02_01 2009-04-05    
      * Fixed nasty bug whereby optional() would truncate concatenated streams.  
        In unusual cases, this might change the interface.  (rt 35997 - 
        reported by XAV <xcaron [...] gmail.com>)

0.02    2009-04-05
      * Rely on HOP-Steam 0.03.  This fixes (rt 37367), reported by RUDY
        <rlippan [...] remotelinux.com>.

0.01    2005-10-28
      * First version, released on an unsuspecting world.
